@@ -1,77 +1,165 @@
 package com.basic.common.utils;
 
-import java.security.KeyFactory;
-import java.security.PrivateKey;
-import java.security.spec.PKCS8EncodedKeySpec;
-import javax.crypto.Cipher;
-
-import com.basic.common.constants.UserConstant;
 import org.apache.commons.codec.binary.Base64;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
+import javax.crypto.Cipher;
+import java.io.ByteArrayOutputStream;
+import java.security.*;
+import java.security.spec.PKCS8EncodedKeySpec;
+import java.security.spec.X509EncodedKeySpec;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
+
+/**
+ * RSA非对称加密辅助类
+ * 前端使用jsencrypt进行分段加密不支持modulus形式加密只能支持Encode方式加密，
+ * 即前端使用jsencrypt加密时使用encryptByPublicKey()、encryptByPrivateKey()方法
+ * 后端进行分段解密
+ */
 public class RSAUtil {
+    public static final String KEY_ALGORITHM = "RSA";
 
-    /** 指定加密算法为RSA */
-    private static final String ALGORITHM = "RSA";
-
-   /* public static void main(String[] args) throws Exception {
-
-        String source = "深圳,您好!";// 要加密的字符串
-        System.out.println("准备用公钥加密的字符串为：" + source);
-
-        String cryptograph = encrypt(source);// 生成的密文
-        System.out.print("用公钥加密后的结果为:" + cryptograph);
-        System.out.println();
-
-        String target = decrypt(cryptograph);// 解密密文
-        System.out.println("用私钥解密后的字符串为：" + target);
-        System.out.println();
-    }*/
+    /* RSA最大加密明文大小 */
+    private static final int MAX_ENCRYPT_BLOCK = 117;
+    /* RSA最大解密密文大小 */
+    private static final int MAX_DECRYPT_BLOCK = 128;
 
     /**
-     * 加密方法
-     * @param source 源数据
+     * RSA 位数 如果采用2048 上面最大加密和最大解密则须填写:  245 256
+     * 指定key的大小(64的整数倍,最小512位)
+     */
+    private static int KEYSIZE = 1024;
+    /* 公钥Key字符串 */
+    public static String PUBLIC_KEY_ENCODED = "RSAPublicKeyEncoded";
+    /* 私钥Key字符串 */
+    public static String PRIVATE_KEY_ENCODED = "RSAPrivateEncoded";
+
+    /**
+     * 生成密钥对(公钥和私钥)
+     *
      * @return
      * @throws Exception
      */
-    public static String encrypt(String source) throws Exception {
+    public static Map<String, Object> genKeyPair() throws Exception {
 
-        java.security.spec.X509EncodedKeySpec x509KeySpec = new java.security.spec.X509EncodedKeySpec(Base64.decodeBase64(UserConstant.LOGIN_RSA_PUBLIC_KEY));
-        // RSA算法
-        java.security.KeyFactory keyFactory = java.security.KeyFactory.getInstance("RSA");
-        // 取公钥匙对象
-        java.security.PublicKey publicKey = keyFactory.generatePublic(x509KeySpec);
-        // 得到Cipher对象来实现对源数据的RSA加密
-        Cipher cipher = Cipher.getInstance(ALGORITHM);
-        cipher.init(Cipher.ENCRYPT_MODE, publicKey);
-        byte[] b = source.getBytes();
-        /** 执行加密操作 */
-        byte[] b1 = cipher.doFinal(b);
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encode(b1);
+        /** RSA算法要求有一个可信任的随机数源 */
+        SecureRandom random = new SecureRandom();
+        /** 为RSA算法创建一个KeyPairGenerator对象 */
+        KeyPairGenerator kpg = KeyPairGenerator.getInstance(KEY_ALGORITHM);
+        /** 利用上面的随机数据源初始化这个KeyPairGenerator对象 */
+        kpg.initialize(KEYSIZE, random);
+        /** 生成密匙对 */
+        KeyPair kp = kpg.generateKeyPair();
+        /** 得到公钥 */
+        Key publicKey = kp.getPublic();
+        /** 得到私钥 */
+        Key privateKey = kp.getPrivate();
+        /** 用字符串将生成的密钥写入文件 */
+        Map<String, Object> keyPairMap = new ConcurrentHashMap<>();
+
+        // 得到公钥字符串
+        keyPairMap.put(PUBLIC_KEY_ENCODED, new String(Base64.encodeBase64(publicKey.getEncoded())));
+        // 得到私钥字符串
+        keyPairMap.put(PRIVATE_KEY_ENCODED, new String(Base64.encodeBase64(privateKey.getEncoded())));
+        return keyPairMap;
     }
 
+
     /**
-     * 解密算法
-     * @param cryptograph    密文
+     * <P>
+     * 私钥解密
+     * </p>
+     *
+     * @param encryptedData 已加密数据
+     * @param privateKey    私钥(BASE64编码)
      * @return
      * @throws Exception
      */
-    public static String decrypt(String cryptograph) throws Exception {
-
-        PKCS8EncodedKeySpec priPKCS8 = new PKCS8EncodedKeySpec(Base64.decodeBase64(UserConstant.LOGIN_RSA_PRIVATE_KEY));
-        KeyFactory keyf = KeyFactory.getInstance("RSA");
-        PrivateKey privateKey = keyf.generatePrivate(priPKCS8);
-
-        /** 得到Cipher对象对已用公钥加密的数据进行RSA解密 */
-        Cipher cipher = Cipher.getInstance(ALGORITHM);
-        cipher.init(Cipher.DECRYPT_MODE, privateKey);
-        BASE64Decoder decoder = new BASE64Decoder();
-        byte[] b1 = decoder.decodeBuffer(cryptograph);
-
-        /** 执行解密操作 */
-        byte[] b = cipher.doFinal(b1);
-        return new String(b,"utf-8");
+    private static byte[] decryptByPrivateKey(byte[] encryptedData, String privateKey)
+            throws Exception {
+        byte[] keyBytes = Base64.decodeBase64(privateKey);
+        PKCS8EncodedKeySpec pkcs8KeySpec = new PKCS8EncodedKeySpec(keyBytes);
+        KeyFactory keyFactory = KeyFactory.getInstance(KEY_ALGORITHM);
+        Key privateK = keyFactory.generatePrivate(pkcs8KeySpec);
+        Cipher cipher = Cipher.getInstance(keyFactory.getAlgorithm());
+        cipher.init(Cipher.DECRYPT_MODE, privateK);
+        int inputLen = encryptedData.length;
+        ByteArrayOutputStream out = new ByteArrayOutputStream();
+        int offSet = 0;
+        byte[] cache;
+        int i = 0;
+        // 对数据分段解密
+        while (inputLen - offSet > 0) {
+            if (inputLen - offSet > MAX_DECRYPT_BLOCK) {
+                cache = cipher.doFinal(encryptedData, offSet, MAX_DECRYPT_BLOCK);
+            } else {
+                cache = cipher.doFinal(encryptedData, offSet, inputLen - offSet);
+            }
+            out.write(cache, 0, cache.length);
+            i++;
+            offSet = i * MAX_DECRYPT_BLOCK;
+        }
+        byte[] decryptedData = out.toByteArray();
+        out.close();
+        return decryptedData;
     }
+
+
+    /**
+     * <p>
+     * 公钥加密
+     * </p>
+     *
+     * @param data      源数据
+     * @param publicKey 公钥(BASE64编码)
+     * @return
+     * @throws Exception
+     */
+    private static byte[] encryptByPublicKey(byte[] data, String publicKey)
+            throws Exception {
+        byte[] keyBytes = Base64.decodeBase64(publicKey);
+        X509EncodedKeySpec x509KeySpec = new X509EncodedKeySpec(keyBytes);
+        KeyFactory keyFactory = KeyFactory.getInstance(KEY_ALGORITHM);
+        Key publicK = keyFactory.generatePublic(x509KeySpec);
+        // 对数据加密
+        Cipher cipher = Cipher.getInstance(keyFactory.getAlgorithm());
+        cipher.init(Cipher.ENCRYPT_MODE, publicK);
+        int inputLen = data.length;
+        ByteArrayOutputStream out = new ByteArrayOutputStream();
+        int offSet = 0;
+        byte[] cache;
+        int i = 0;
+        // 对数据分段加密
+        while (inputLen - offSet > 0) {
+            if (inputLen - offSet > MAX_ENCRYPT_BLOCK) {
+                cache = cipher.doFinal(data, offSet, MAX_ENCRYPT_BLOCK);
+            } else {
+                cache = cipher.doFinal(data, offSet, inputLen - offSet);
+            }
+            out.write(cache, 0, cache.length);
+            i++;
+            offSet = i * MAX_ENCRYPT_BLOCK;
+        }
+        byte[] encryptedData = out.toByteArray();
+        out.close();
+        return encryptedData;
+    }
+
+    public static String encrypt(String str, String publicKey) throws Exception {
+        if (StringUtils.isNotBlank(str)) {
+            byte[] data = str.getBytes();
+            return new String(Base64.encodeBase64(RSAUtil.encryptByPublicKey(data, publicKey)), CharsetKit.CHARSET_UTF_8);
+        }
+        return null;
+    }
+
+    public static String decrypt(String str, String privateKey) throws Exception {
+        if (StringUtils.isNotBlank(str)) {
+            byte[] encodedData = Base64.decodeBase64(str);
+            byte[] decodedData = RSAUtil.decryptByPrivateKey(encodedData, privateKey);
+            return new String(decodedData, CharsetKit.CHARSET_UTF_8);
+        }
+        return null;
+    }
+
 }
